@@ -1,5 +1,15 @@
 2005-01-03  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/plaf/metal/MetalLookAndFeel.java
+	(getControlTextFont): New method.
+	(getMenuTextFont): Likewise.
+	(getSubTextFont): Likewise.
+	(getSystemTextFont): Likewise.
+	(getUserTextFont): Likewise.
+	(getWindowTitleFont): Likewise.
+
+2005-01-03  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/text/AbstractDocument.java
 	(documentFilter): New field.
 	(getDocumentFilter): New method.
